--- a/src/locales/ar-XA.json
+++ b/src/locales/ar-XA.json
@@ -37,5 +37,6 @@
 	"translate": "ترجمة",
 	"chat": "دردشة",
 	"room": "غرفة جديدة",
-	"new_room": "الغرفة"
+	"new_room": "الغرفة",
+	"learn": "يتعلم"
 }
