--- a/src/locales/bn-IN.json
+++ b/src/locales/bn-IN.json
@@ -37,5 +37,6 @@
 	"translate": "অনুবাদ করুন",
 	"chat": "চ্যাট",
 	"room": "রুম",
-	"new_room": "নতুন রুম"
+	"new_room": "নতুন রুম",
+	"learn": "শিখুন"
 }
