--- a/src/locales/ca-ES.json
+++ b/src/locales/ca-ES.json
@@ -37,5 +37,6 @@
 	"translate": "Traduir",
 	"chat": "Xat",
 	"room": "Habitació",
-	"new_room": "Habitació nova"
+	"new_room": "Habitació nova",
+	"learn": "Aprèn"
 }
