--- a/src/locales/cs-CZ.json
+++ b/src/locales/cs-CZ.json
@@ -37,5 +37,6 @@
 	"translate": "Přeložit",
 	"chat": "Chat",
 	"room": "Místnost",
-	"new_room": "Nová místnost"
+	"new_room": "Nová místnost",
+	"learn": "Učit se"
 }
