--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -37,5 +37,6 @@
 	"translate": "Übersetzen",
 	"chat": "Chat",
 	"room": "Raum",
-	"new_room": "Neuer Raum"
+	"new_room": "Neuer Raum",
+	"learn": "Lernen"
 }
