--- a/src/locales/el-GR.json
+++ b/src/locales/el-GR.json
@@ -37,5 +37,6 @@
 	"translate": "Μετάφραση",
 	"chat": "Συνομιλία",
 	"room": "Δωμάτιο",
-	"new_room": "Νέο δωμάτιο"
+	"new_room": "Νέο δωμάτιο",
+	"learn": "Μαθαίνω"
 }
