--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -37,5 +37,6 @@
 	"translate": "Translate",
 	"chat": "Chat",
 	"room": "Room",
-	"new_room": "New room"
+	"new_room": "New room",
+	"learn": "Learn"
 }
