--- a/src/locales/es-US.json
+++ b/src/locales/es-US.json
@@ -37,5 +37,6 @@
 	"translate": "Traducir",
 	"chat": "Chat",
 	"room": "Habitación",
-	"new_room": "Habitación nueva"
+	"new_room": "Habitación nueva",
+	"learn": "Aprender"
 }
