--- a/src/locales/gl-ES.json
+++ b/src/locales/gl-ES.json
@@ -37,5 +37,6 @@
 	"translate": "Traducir",
 	"chat": "Conversa",
 	"room": "Habitación",
-	"new_room": "Habitación nova"
+	"new_room": "Habitación nova",
+	"learn": "Aprende"
 }
