--- a/src/locales/hi-IN.json
+++ b/src/locales/hi-IN.json
@@ -37,5 +37,6 @@
 	"translate": "अनुवाद करें",
 	"chat": "चैट",
 	"room": "कमरा",
-	"new_room": "नया कमरा"
+	"new_room": "नया कमरा",
+	"learn": "सीखना"
 }
