--- a/src/locales/hu-HU.json
+++ b/src/locales/hu-HU.json
@@ -37,5 +37,6 @@
 	"translate": "Fordítás",
 	"chat": "Csevegés",
 	"room": "Szoba",
-	"new_room": "Új szoba"
+	"new_room": "Új szoba",
+	"learn": "Tanul"
 }
