--- a/src/locales/id-ID.json
+++ b/src/locales/id-ID.json
@@ -37,5 +37,6 @@
 	"translate": "Terjemahkan",
 	"chat": "Obrolan",
 	"room": "Ruangan",
-	"new_room": "Ruangan baru"
+	"new_room": "Ruangan baru",
+	"learn": "Mempelajari"
 }
