--- a/src/locales/kn-IN.json
+++ b/src/locales/kn-IN.json
@@ -37,5 +37,6 @@
 	"translate": "ಅನುವಾದಿಸಿ",
 	"chat": "ಸಂಭಾಷಣೆ",
 	"room": "ಕೊಠಡಿ",
-	"new_room": "ಹೊಸ ಕೊಠಡಿ"
+	"new_room": "ಹೊಸ ಕೊಠಡಿ",
+	"learn": "ಕಲಿ"
 }
