--- a/src/locales/lt-LT.json
+++ b/src/locales/lt-LT.json
@@ -37,5 +37,6 @@
 	"translate": "Versti",
 	"chat": "Pokalbis",
 	"room": "Kambarys",
-	"new_room": "Naujas kambarys"
+	"new_room": "Naujas kambarys",
+	"learn": "Mokytis"
 }
