--- a/src/locales/lv-LV.json
+++ b/src/locales/lv-LV.json
@@ -37,5 +37,6 @@
 	"translate": "Tulkot",
 	"chat": "Čats",
 	"room": "Istaba",
-	"new_room": "Jauna istaba"
+	"new_room": "Jauna istaba",
+	"learn": "Uzziniet"
 }
