--- a/src/locales/mr-IN.json
+++ b/src/locales/mr-IN.json
@@ -37,5 +37,6 @@
 	"translate": "भाषांतर करा",
 	"chat": "चॅट",
 	"room": "कक्ष",
-	"new_room": "नवीन कक्ष"
+	"new_room": "नवीन कक्ष",
+	"learn": "शिका"
 }
