--- a/src/locales/ms-MY.json
+++ b/src/locales/ms-MY.json
@@ -37,5 +37,6 @@
 	"translate": "Terjemah",
 	"chat": "Cakap-cakap",
 	"room": "Bilik",
-	"new_room": "Bilik baru"
+	"new_room": "Bilik baru",
+	"learn": "Belajar"
 }
