--- a/src/locales/pa-IN.json
+++ b/src/locales/pa-IN.json
@@ -37,5 +37,6 @@
 	"translate": "ਅਨੁਵਾਦ ਕਰੋ",
 	"chat": "ਚੈੱਟ",
 	"room": "ਕਮਰਾ",
-	"new_room": "ਨਵਾਂ ਕਮਰਾ"
+	"new_room": "ਨਵਾਂ ਕਮਰਾ",
+	"learn": "ਸਿੱਖੋ"
 }
