--- a/src/locales/pt-PT.json
+++ b/src/locales/pt-PT.json
@@ -37,5 +37,6 @@
 	"translate": "Traduzir",
 	"chat": "Conversa",
 	"room": "Quarto",
-	"new_room": "Novo quarto"
+	"new_room": "Novo quarto",
+	"learn": "Aprender"
 }
