--- a/src/locales/sk-SK.json
+++ b/src/locales/sk-SK.json
@@ -37,5 +37,6 @@
 	"translate": "Preložiť",
 	"chat": "Chat",
 	"room": "Izba",
-	"new_room": "Nová izba"
+	"new_room": "Nová izba",
+	"learn": "Učte sa"
 }
