--- a/src/locales/ta-IN.json
+++ b/src/locales/ta-IN.json
@@ -37,5 +37,6 @@
 	"translate": "மொழிபெயர்",
 	"chat": "உரையாடல்",
 	"room": "அறை",
-	"new_room": "புதிய அறை"
+	"new_room": "புதிய அறை",
+	"learn": "அறிய"
 }
