--- a/src/locales/th-TH.json
+++ b/src/locales/th-TH.json
@@ -37,5 +37,6 @@
 	"translate": "แปล",
 	"chat": "แชท",
 	"room": "ห้อง",
-	"new_room": "ห้องใหม่"
+	"new_room": "ห้องใหม่",
+	"learn": "เรียนรู้"
 }
