--- a/src/locales/tr-TR.json
+++ b/src/locales/tr-TR.json
@@ -37,5 +37,6 @@
 	"translate": "Çevir",
 	"chat": "Sohbet",
 	"room": "Oda",
-	"new_room": "Yeni oda"
+	"new_room": "Yeni oda",
+	"learn": "Öğrenmek"
 }
