--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -37,5 +37,6 @@
 	"translate": "Dịch",
 	"chat": "Trò chuyện",
 	"room": "Phòng",
-	"new_room": "Phòng mới"
+	"new_room": "Phòng mới",
+	"learn": "Học hỏi"
 }
