--- a/src/locales/af-ZA.json
+++ b/src/locales/af-ZA.json
@@ -37,5 +37,6 @@
 	"translate": "Vertaal",
 	"chat": "Klets",
 	"room": "Kamer",
-	"new_room": "Nuwe kamer"
+	"new_room": "Nuwe kamer",
+	"learn": "Leer"
 }
