--- a/src/locales/bg-BG.json
+++ b/src/locales/bg-BG.json
@@ -37,5 +37,6 @@
 	"translate": "Преведи",
 	"chat": "Чат",
 	"room": "Стая",
-	"new_room": "Нова стая"
+	"new_room": "Нова стая",
+	"learn": "Уча"
 }
