--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -37,5 +37,6 @@
 	"translate": "Traducir",
 	"chat": "Chat",
 	"room": "Habitación",
-	"new_room": "Nueva habitación"
+	"new_room": "Nueva habitación",
+	"learn": "Aprender"
 }
