--- a/src/locales/eu-ES.json
+++ b/src/locales/eu-ES.json
@@ -37,5 +37,6 @@
 	"translate": "Itzuli",
 	"chat": "Txat",
 	"room": "Gela",
-	"new_room": "Gela berria"
+	"new_room": "Gela berria",
+	"learn": "Ikasi"
 }
