--- a/src/locales/fil-PH.json
+++ b/src/locales/fil-PH.json
@@ -37,5 +37,6 @@
 	"translate": "Isalin",
 	"chat": "Usapan",
 	"room": "Kuwarto",
-	"new_room": "Bagong kuwarto"
+	"new_room": "Bagong kuwarto",
+	"learn": "Matuto"
 }
