--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -37,5 +37,6 @@
 	"translate": "Traduire",
 	"chat": "Chat",
 	"room": "Chambre",
-	"new_room": "Nouvelle chambre"
+	"new_room": "Nouvelle chambre",
+	"learn": "Apprendre"
 }
