--- a/src/locales/it-IT.json
+++ b/src/locales/it-IT.json
@@ -37,5 +37,6 @@
 	"translate": "Traduci",
 	"chat": "Chat",
 	"room": "Stanza",
-	"new_room": "Nuova stanza"
+	"new_room": "Nuova stanza",
+	"learn": "Imparare"
 }
