--- a/src/locales/km-KH.json
+++ b/src/locales/km-KH.json
@@ -37,5 +37,6 @@
 	"translate": "បកប្រែ",
 	"chat": "ជជែក​កម្ម",
 	"room": "បន្ទប់",
-	"new_room": "បន្ទប់ថ្មី"
+	"new_room": "បន្ទប់ថ្មី",
+	"learn": "រៀន"
 }
