--- a/src/locales/ml-IN.json
+++ b/src/locales/ml-IN.json
@@ -37,5 +37,6 @@
 	"translate": "പരിഭാഷ ചെയ്യുക",
 	"chat": "സംസാരം",
 	"room": "റൂം",
-	"new_room": "പുതിയ റൂം"
+	"new_room": "പുതിയ റൂം",
+	"learn": "പഠിക്കുക"
 }
