--- a/src/locales/nb-NO.json
+++ b/src/locales/nb-NO.json
@@ -37,5 +37,6 @@
 	"translate": "Oversett",
 	"chat": "Chat",
 	"room": "Rom",
-	"new_room": "Nytt rom"
+	"new_room": "Nytt rom",
+	"learn": "Lære"
 }
