--- a/src/locales/sr-RS.json
+++ b/src/locales/sr-RS.json
@@ -37,5 +37,6 @@
 	"translate": "Преведи",
 	"chat": "Чет",
 	"room": "Соба",
-	"new_room": "Нова соба"
+	"new_room": "Нова соба",
+	"learn": "Научите"
 }
