--- a/src/locales/sv-SE.json
+++ b/src/locales/sv-SE.json
@@ -37,5 +37,6 @@
 	"translate": "Översätt",
 	"chat": "Chatt",
 	"room": "Rum",
-	"new_room": "Nytt rum"
+	"new_room": "Nytt rum",
+	"learn": "Lära sig"
 }
