--- a/src/locales/te-IN.json
+++ b/src/locales/te-IN.json
@@ -37,5 +37,6 @@
 	"translate": "అనువదించు",
 	"chat": "చాట్",
 	"room": "గది",
-	"new_room": "కొత్త గది"
+	"new_room": "కొత్త గది",
+	"learn": "నేర్చుకో"
 }
