Add locale for profile screen #1054

--- a/src/locales/af-ZA.json
+++ b/src/locales/af-ZA.json
@@ -38,5 +38,7 @@
 	"chat": "Klets",
 	"room": "Kamer",
 	"new_room": "Nuwe kamer",
-	"learn": "Leer"
+	"learn": "Leer",
+	"profile": "Profiel",
+	"change_icon": "VERANDER IKOON"
 }
