--- a/src/locales/ar-XA.json
+++ b/src/locales/ar-XA.json
@@ -38,5 +38,7 @@
 	"chat": "دردشة",
 	"room": "غرفة جديدة",
 	"new_room": "الغرفة",
-	"learn": "يتعلم"
+	"learn": "يتعلم",
+	"profile": "حساب تعريفي",
+	"change_icon": "تغيير الايقونة"
 }
