--- a/src/locales/bg-BG.json
+++ b/src/locales/bg-BG.json
@@ -38,5 +38,7 @@
 	"chat": "Чат",
 	"room": "Стая",
 	"new_room": "Нова стая",
-	"learn": "Уча"
+	"learn": "Уча",
+	"profile": "Профил",
+	"change_icon": "ПРОМЯНА НА ИКОНАТА"
 }
