--- a/src/locales/bn-IN.json
+++ b/src/locales/bn-IN.json
@@ -38,5 +38,7 @@
 	"chat": "চ্যাট",
 	"room": "রুম",
 	"new_room": "নতুন রুম",
-	"learn": "শিখুন"
+	"learn": "শিখুন",
+	"profile": "প্রোফাইল",
+	"change_icon": "প্রতীক পাল্টান"
 }
