--- a/src/locales/ca-ES.json
+++ b/src/locales/ca-ES.json
@@ -38,5 +38,7 @@
 	"chat": "Xat",
 	"room": "Habitació",
 	"new_room": "Habitació nova",
-	"learn": "Aprèn"
+	"learn": "Aprèn",
+	"profile": "Perfil",
+	"change_icon": "CANVI ICONA"
 }
