--- a/src/locales/cmn-TW.json
+++ b/src/locales/cmn-TW.json
@@ -38,5 +38,7 @@
 	"chat": "聊天",
 	"room": "房間",
 	"new_room": "新房間",
-	"learn": "學習"
+	"learn": "學習",
+	"profile": "輪廓",
+	"change_icon": "更改圖標"
 }
