--- a/src/locales/el-GR.json
+++ b/src/locales/el-GR.json
@@ -38,5 +38,7 @@
 	"chat": "Συνομιλία",
 	"room": "Δωμάτιο",
 	"new_room": "Νέο δωμάτιο",
-	"learn": "Μαθαίνω"
+	"learn": "Μαθαίνω",
+	"profile": "Προφίλ",
+	"change_icon": "ΑΛΛΑΓΗ ΕΙΚΟΝΙΔΙΟΥ"
 }
