--- a/src/locales/eu-ES.json
+++ b/src/locales/eu-ES.json
@@ -38,5 +38,7 @@
 	"chat": "Txat",
 	"room": "Gela",
 	"new_room": "Gela berria",
-	"learn": "Ikasi"
+	"learn": "Ikasi",
+	"profile": "Profila",
+	"change_icon": "ALDAKETA IKONOA"
 }
