--- a/src/locales/fil-PH.json
+++ b/src/locales/fil-PH.json
@@ -38,5 +38,7 @@
 	"chat": "Usapan",
 	"room": "Kuwarto",
 	"new_room": "Bagong kuwarto",
-	"learn": "Matuto"
+	"learn": "Matuto",
+	"profile": "Profile",
+	"change_icon": "PALITAN ANG ICON"
 }
