--- a/src/locales/he-IL.json
+++ b/src/locales/he-IL.json
@@ -38,5 +38,7 @@
 	"chat": "צ'אט",
 	"room": "חדר חדש",
 	"new_room": "חדר",
-	"learn": "לִלמוֹד"
+	"learn": "לִלמוֹד",
+	"profile": "פּרוֹפִיל",
+	"change_icon": "שנה אייקון"
 }
