--- a/src/locales/hi-IN.json
+++ b/src/locales/hi-IN.json
@@ -38,5 +38,7 @@
 	"chat": "चैट",
 	"room": "कमरा",
 	"new_room": "नया कमरा",
-	"learn": "सीखना"
+	"learn": "सीखना",
+	"profile": "प्रोफ़ाइल",
+	"change_icon": "आइकॉन बदलें"
 }
