--- a/src/locales/hu-HU.json
+++ b/src/locales/hu-HU.json
@@ -38,5 +38,7 @@
 	"chat": "Csevegés",
 	"room": "Szoba",
 	"new_room": "Új szoba",
-	"learn": "Tanul"
+	"learn": "Tanul",
+	"profile": "Profil",
+	"change_icon": "MÓDOSÍTÁS IKON"
 }
