--- a/src/locales/id-ID.json
+++ b/src/locales/id-ID.json
@@ -38,5 +38,7 @@
 	"chat": "Obrolan",
 	"room": "Ruangan",
 	"new_room": "Ruangan baru",
-	"learn": "Mempelajari"
+	"learn": "Mempelajari",
+	"profile": "Profil",
+	"change_icon": "UBAH IKON"
 }
