--- a/src/locales/is-IS.json
+++ b/src/locales/is-IS.json
@@ -38,5 +38,7 @@
 	"chat": "Spjall",
 	"room": "Herbergi",
 	"new_room": "Ný herbergi",
-	"learn": "Læra"
+	"learn": "Læra",
+	"profile": "Prófíll",
+	"change_icon": "BREYTA TÁKN"
 }
