--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -38,5 +38,7 @@
 	"chat": "チャット",
 	"room": "ルーム",
 	"new_room": "新規ルーム",
-	"learn": "学ぶ"
+	"learn": "学ぶ",
+	"profile": "プロフィール",
+	"change_icon": "アイコンの変更"
 }
