--- a/src/locales/km-KH.json
+++ b/src/locales/km-KH.json
@@ -38,5 +38,7 @@
 	"chat": "ជជែក​កម្ម",
 	"room": "បន្ទប់",
 	"new_room": "បន្ទប់ថ្មី",
-	"learn": "រៀន"
+	"learn": "រៀន",
+	"profile": "ប្រវត្តិរូប",
+	"change_icon": "ផ្លាស់ប្តូររូបតំណាង"
 }
