--- a/src/locales/kn-IN.json
+++ b/src/locales/kn-IN.json
@@ -38,5 +38,7 @@
 	"chat": "ಸಂಭಾಷಣೆ",
 	"room": "ಕೊಠಡಿ",
 	"new_room": "ಹೊಸ ಕೊಠಡಿ",
-	"learn": "ಕಲಿ"
+	"learn": "ಕಲಿ",
+	"profile": "ಪ್ರೊಫೈಲ್",
+	"change_icon": "ಐಕಾನ್ ಬದಲಾಯಿಸಿ"
 }
