--- a/src/locales/lt-LT.json
+++ b/src/locales/lt-LT.json
@@ -38,5 +38,7 @@
 	"chat": "Pokalbis",
 	"room": "Kambarys",
 	"new_room": "Naujas kambarys",
-	"learn": "Mokytis"
+	"learn": "Mokytis",
+	"profile": "Profilis",
+	"change_icon": "PAKEISTI Piktograma"
 }
