--- a/src/locales/lv-LV.json
+++ b/src/locales/lv-LV.json
@@ -38,5 +38,7 @@
 	"chat": "Čats",
 	"room": "Istaba",
 	"new_room": "Jauna istaba",
-	"learn": "Uzziniet"
+	"learn": "Uzziniet",
+	"profile": "Profils",
+	"change_icon": "MAINĪT IKONA"
 }
