--- a/src/locales/ml-IN.json
+++ b/src/locales/ml-IN.json
@@ -38,5 +38,7 @@
 	"chat": "സംസാരം",
 	"room": "റൂം",
 	"new_room": "പുതിയ റൂം",
-	"learn": "പഠിക്കുക"
+	"learn": "പഠിക്കുക",
+	"profile": "പ്രൊഫൈൽ",
+	"change_icon": "ഐക്കൺ മാറ്റുക"
 }
