--- a/src/locales/mr-IN.json
+++ b/src/locales/mr-IN.json
@@ -38,5 +38,7 @@
 	"chat": "चॅट",
 	"room": "कक्ष",
 	"new_room": "नवीन कक्ष",
-	"learn": "शिका"
+	"learn": "शिका",
+	"profile": "प्रोफाइल",
+	"change_icon": "आयकॉन बदला"
 }
