--- a/src/locales/ms-MY.json
+++ b/src/locales/ms-MY.json
@@ -38,5 +38,7 @@
 	"chat": "Cakap-cakap",
 	"room": "Bilik",
 	"new_room": "Bilik baru",
-	"learn": "Belajar"
+	"learn": "Belajar",
+	"profile": "Profil",
+	"change_icon": "TUKAR IKON"
 }
