--- a/src/locales/pl-PL.json
+++ b/src/locales/pl-PL.json
@@ -38,5 +38,7 @@
 	"chat": "Czat",
 	"room": "Pokój",
 	"new_room": "Nowy pokój",
-	"learn": "Uczyć się"
+	"learn": "Uczyć się",
+	"profile": "Profil",
+	"change_icon": "ZMIEŃ IKONĘ"
 }
