--- a/src/locales/pt-PT.json
+++ b/src/locales/pt-PT.json
@@ -38,5 +38,7 @@
 	"chat": "Conversa",
 	"room": "Quarto",
 	"new_room": "Novo quarto",
-	"learn": "Aprender"
+	"learn": "Aprender",
+	"profile": "Perfil",
+	"change_icon": "ÍCONE DE MUDANÇA"
 }
