--- a/src/locales/ro-RO.json
+++ b/src/locales/ro-RO.json
@@ -38,5 +38,7 @@
 	"chat": "Chat",
 	"room": "Cameră",
 	"new_room": "Cameră nouă",
-	"learn": "Învăța"
+	"learn": "Învăța",
+	"profile": "Profil",
+	"change_icon": "SCHIMBĂ ICONIȚA"
 }
