--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -38,5 +38,7 @@
 	"chat": "Чат",
 	"room": "Комната",
 	"new_room": "Новая комната",
-	"learn": "Учиться"
+	"learn": "Учиться",
+	"profile": "Профиль",
+	"change_icon": "ИЗМЕНИТЬ ЗНАЧОК"
 }
