--- a/src/locales/sk-SK.json
+++ b/src/locales/sk-SK.json
@@ -38,5 +38,7 @@
 	"chat": "Chat",
 	"room": "Izba",
 	"new_room": "Nová izba",
-	"learn": "Učte sa"
+	"learn": "Učte sa",
+	"profile": "Profil",
+	"change_icon": "ZMENIŤ IKONU"
 }
