--- a/src/locales/sr-RS.json
+++ b/src/locales/sr-RS.json
@@ -38,5 +38,7 @@
 	"chat": "Чет",
 	"room": "Соба",
 	"new_room": "Нова соба",
-	"learn": "Научите"
+	"learn": "Научите",
+	"profile": "Профил",
+	"change_icon": "ПРОМЕНИ ИКОНУ"
 }
