--- a/src/locales/sv-SE.json
+++ b/src/locales/sv-SE.json
@@ -38,5 +38,7 @@
 	"chat": "Chatt",
 	"room": "Rum",
 	"new_room": "Nytt rum",
-	"learn": "Lära sig"
+	"learn": "Lära sig",
+	"profile": "Profil",
+	"change_icon": "BYTA IKON"
 }
