--- a/src/locales/ta-IN.json
+++ b/src/locales/ta-IN.json
@@ -38,5 +38,7 @@
 	"chat": "உரையாடல்",
 	"room": "அறை",
 	"new_room": "புதிய அறை",
-	"learn": "அறிய"
+	"learn": "அறிய",
+	"profile": "சுயவிவரம்",
+	"change_icon": "ஐகானை மாற்றவும்"
 }
