--- a/src/locales/te-IN.json
+++ b/src/locales/te-IN.json
@@ -38,5 +38,7 @@
 	"chat": "చాట్",
 	"room": "గది",
 	"new_room": "కొత్త గది",
-	"learn": "నేర్చుకో"
+	"learn": "నేర్చుకో",
+	"profile": "ప్రొఫైల్",
+	"change_icon": "చిహ్నాన్ని మార్చండి"
 }
