--- a/src/locales/th-TH.json
+++ b/src/locales/th-TH.json
@@ -38,5 +38,7 @@
 	"chat": "แชท",
 	"room": "ห้อง",
 	"new_room": "ห้องใหม่",
-	"learn": "เรียนรู้"
+	"learn": "เรียนรู้",
+	"profile": "ประวัติโดยย่อ",
+	"change_icon": "เปลี่ยนไอคอน"
 }
