--- a/src/locales/tr-TR.json
+++ b/src/locales/tr-TR.json
@@ -38,5 +38,7 @@
 	"chat": "Sohbet",
 	"room": "Oda",
 	"new_room": "Yeni oda",
-	"learn": "Öğrenmek"
+	"learn": "Öğrenmek",
+	"profile": "Profil",
+	"change_icon": "SİMGESİ DEĞİŞTİR"
 }
