--- a/src/locales/uk-UA.json
+++ b/src/locales/uk-UA.json
@@ -38,5 +38,7 @@
 	"chat": "Чат",
 	"room": "Кімната",
 	"new_room": "Нова кімната",
-	"learn": "вчитися"
+	"learn": "вчитися",
+	"profile": "Профіль",
+	"change_icon": "ЗМІНИТИ ЗНАЧОК"
 }
