--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -38,5 +38,7 @@
 	"chat": "Trò chuyện",
 	"room": "Phòng",
 	"new_room": "Phòng mới",
-	"learn": "Học hỏi"
+	"learn": "Học hỏi",
+	"profile": "Hồ sơ",
+	"change_icon": "THAY ĐỔI BIỂU TƯỢNG"
 }
