--- a/src/locales/cmn-CN.json
+++ b/src/locales/cmn-CN.json
@@ -38,5 +38,7 @@
 	"chat": "聊天",
 	"room": "房间",
 	"new_room": "新的房间",
-	"learn": "学习"
+	"learn": "学习",
+	"profile": "轮廓",
+	"change_icon": "更改图标"
 }
