--- a/src/locales/da-DK.json
+++ b/src/locales/da-DK.json
@@ -38,5 +38,7 @@
 	"chat": "Chat",
 	"room": "Rum",
 	"new_room": "Nyt rum",
-	"learn": "Lære"
+	"learn": "Lære",
+	"profile": "Profil",
+	"change_icon": "SKIFT IKONET"
 }
