--- a/src/locales/gu-IN.json
+++ b/src/locales/gu-IN.json
@@ -38,5 +38,7 @@
 	"chat": "ચેટ",
 	"room": "કક્ષ",
 	"new_room": "નવી કક્ષ",
-	"learn": "જાણો"
+	"learn": "જાણો",
+	"profile": "પ્રોફાઇલ",
+	"change_icon": "આઇકન બદલો"
 }
