--- a/src/locales/ko-KR.json
+++ b/src/locales/ko-KR.json
@@ -38,5 +38,7 @@
 	"chat": "채팅",
 	"room": "방",
 	"new_room": "새로운 방",
-	"learn": "배우다"
+	"learn": "배우다",
+	"profile": "프로필",
+	"change_icon": "아이콘 변경"
 }
