--- a/src/locales/nb-NO.json
+++ b/src/locales/nb-NO.json
@@ -38,5 +38,7 @@
 	"chat": "Chat",
 	"room": "Rom",
 	"new_room": "Nytt rom",
-	"learn": "Lære"
+	"learn": "Lære",
+	"profile": "Profil",
+	"change_icon": "ENDRE IKONET"
 }
