--- a/src/locales/nl-NL.json
+++ b/src/locales/nl-NL.json
@@ -38,5 +38,7 @@
 	"chat": "Chat",
 	"room": "Kamer",
 	"new_room": "Nieuwe kamer",
-	"learn": "Leren"
+	"learn": "Leren",
+	"profile": "Profiel",
+	"change_icon": "VERANDER ICOON"
 }
