--- a/src/locales/pa-IN.json
+++ b/src/locales/pa-IN.json
@@ -38,5 +38,7 @@
 	"chat": "ਚੈੱਟ",
 	"room": "ਕਮਰਾ",
 	"new_room": "ਨਵਾਂ ਕਮਰਾ",
-	"learn": "ਸਿੱਖੋ"
+	"learn": "ਸਿੱਖੋ",
+	"profile": "ਪ੍ਰੋਫਾਈਲ",
+	"change_icon": "ਆਈਕਨ ਬਦਲੋ"
 }
